--- a/site/wp-content/languages/admin-es_MX.po
+++ b/site/wp-content/languages/admin-es_MX.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Administration package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-04-23 19:00:25+0000\n"
+"PO-Revision-Date: 2015-05-29 17:53:27+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,6 +14,10 @@ msgstr ""
 #: wp-admin/about.php:127
 msgid "Terms shared across multiple taxonomies will be split when one of them is updated. Find out more in the <a href=\"%1$s\">Plugin Developer Handbook</a>."
 msgstr "Términos compartidos entre múltiples taxonomías serán divididos cuando cualquiera de ellos se actualice. Puedes saber más en el <a href=\"%1$s\">Manual Desarrollador Plugin</a>"
+
+#: wp-admin/about.php:115
+msgid "Database character encoding has changed from utf8 to utf8mb4, which adds support for a whole range of new 4-byte characters."
+msgstr "La codificación de caracteres de las bases de datos ha cambiado de utf8 a utf8mb4, lo que añade soporte a un gran abanico de caracteres de 4-bytes."
 
 #: wp-admin/about.php:94
 msgid "Switch themes in the Customizer"
@@ -60,10 +64,6 @@ msgstr "Adiós, pantallas de carga aburridas. Hola, actualizaciones de plugins s
 #: wp-admin/about.php:104
 msgid "Streamlined plugin updates"
 msgstr "Actualizaciones de plugins simplificadas"
-
-#: wp-admin/about.php:115
-msgid "Database character encoding has changed from utf8 to utf8mb4, which adds support for a whole range of new 4-byte characters."
-msgstr "La codificación de caracteres de las bases de datos ha cambiao de utf8 a utf8mb4, lo que añade un gran abanico de caracteres de 4-bytes."
 
 #: wp-admin/about.php:114
 msgid "utf8mb4 support"
